--- a/app/views/layouts/bucketlist.html.erb
+++ b/app/views/layouts/bucketlist.html.erb
@@ -10,8 +10,8 @@
   </head>
 
   <body>
-    <h1>~ Bucketlist ~</h1>
-    <p><a href="/users/">Log in</a> - <a href="/listings/">Browse listings</a> - <a href="/listings/new">List car</a></p>
+    <h1 id="site_header">~ Bucketlist ~</h1>
+    <p><a href="/users/">Log in</a> - <a href="/auctions/">Browse auctions</a> - <a href="/auctions/new">List car</a></p>
     ----------------------------------------------------------
 
     <%= yield %>
