--- a/app/views/auctions/new.html.erb
+++ b/app/views/auctions/new.html.erb
@@ -1,22 +1,22 @@
 
-<% if @listing.errors.any? %>
+<% if @auction.errors.any? %>
   <div id= "error_explanation">
     <h2>There were some errors:</h2>
     <ul>
-      <% @listing.errors.full_messages.each do |message| %>
+      <% @auction.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
     </ul>
   </div>
 <% end %>
 
-<%= form_for @listing do |f| %>
+<%= form_for @auction do |f| %>
   <%= f.label :title %><br>
   <%= f.text_field :title %><br>
   <%= f.label :description %><br>
   <%= f.text_area :description %><br>
-  <%= f.label :price %><br>
-  <%= f.number_field :price %><br>
+  <%= f.label :starting_bid %><br>
+  <%= f.number_field :starting_bid %><br>
   <%= f.label :car_info %><br><br>
   <%= f.fields_for :car do |c| %>
     <%= c.label :make %><br>
@@ -31,6 +31,6 @@
     <%= c.number_field :mileage %><br>
   <% end %><br><br>
   <%= f.label :user_id %>
-  <%= f.collection_select :user_id, User.all, :id, :username, prompt:true %><br><br>
+  <%= f.collection_select :seller_id, User.all, :id, :username, prompt:true %><br><br>
   <%= f.submit %>
 <% end %>
