--- a/app/views/auctions/show.html.erb
+++ b/app/views/auctions/show.html.erb
@@ -16,3 +16,5 @@
 </ul><br>
 
 <p>Seller: <%= link_to @auction.seller.username, @auction.seller %></p>
+
+<%= link_to "Edit auction information", @auction %>
