--- a/app/views/auctions/new.html.erb
+++ b/app/views/auctions/new.html.erb
@@ -16,21 +16,8 @@
   <%= f.label :description %><br>
   <%= f.text_area :description %><br>
   <%= f.label :starting_bid %><br>
-  <%= f.number_field :starting_bid %><br>
-  <%= f.label :car_info %><br><br>
-  <%= f.fields_for :car do |c| %>
-    <%= c.label :make %><br>
-    <%= c.text_field :make %><br>
-    <%= c.label :model %><br>
-    <%= c.text_field :model %><br>
-    <%= c.label :color %><br>
-    <%= c.text_field :color %><br>
-    <%= c.label :year %><br>
-    <%= c.number_field :year %><br>
-    <%= c.label :mileage %><br>
-    <%= c.number_field :mileage %><br>
-  <% end %><br><br>
-  <%= f.label :user_id %>
-  <%= f.collection_select :seller_id, User.all, :id, :username, prompt:true %><br><br>
+  <%= f.number_field :starting_bid %><br><br>
+  <%= f.label :select_car %> 
+  <%= f.collection_select :car_id, @user.cars, :id, :model, prompt:true %><br><br>
   <%= f.submit %>
 <% end %>
