--- a/app/views/layouts/bucketlist_user.html.erb
+++ b/app/views/layouts/bucketlist_user.html.erb
@@ -11,7 +11,9 @@
 
   <body>
     <h1 id="site_header">~ Bucketlist ~</h1>
-    <p><a href="/users/">Log in</a> - <a href="/auctions/">Browse auctions</a> - <a href="/auctions/new">List car</a></p>
+
+    <p>Logged in as <%= session[:username] %></p>
+    <p><a href="/">Log out</a> - <a href="/auctions/">Browse auctions</a> - <a href="/auctions/new">List car</a></p>
     ----------------------------------------------------------
 
     <%= yield %>
