--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,4 +5,15 @@
 <%= submit_tag "Delete User" %>
 <% end %>
 
+<h3>Your Auctions:</h3>
+<ul>
+  <% @user.seller_auctions.each do |auction|%>
+  <%= link_to "#{auction.car.make} #{auction.car.model}", auction_path(auction) %><br>
+  <%= "Title: #{auction.title}" %><br>
+  <%= "Description: #{auction.description}" %><br>
+  <% end %>
+</ul>
+
+
 <h4><%= link_to "User Index", users_path %></h4>
+<h4><%= link_to "My Cars", user_cars_path %></h4>
