--- a/app/views/layouts/bucketlist_user.html.erb
+++ b/app/views/layouts/bucketlist_user.html.erb
@@ -13,7 +13,7 @@
     <h1 id="site_header">~ Bucketlist ~</h1>
 
     <p>Logged in as <%= session[:username] %></p>
-    <p><a href="/">Log out</a> - <a href="/auctions/">Browse auctions</a> - <a href="/auctions/new">List car</a></p>
+    <p><a href="/logout">Log out</a> - <a href="/auctions/">Browse auctions</a> - <a href="/auctions/new">List car</a></p>
     ----------------------------------------------------------
 
     <%= yield %>
