--- a/app/views/application/logout.html.erb
+++ b/app/views/application/logout.html.erb
@@ -1,5 +1,5 @@
 
-<h1>Hi, <%= session[:username] %>.</h1>
+<h1>Log out as <%= session[:username] %>?</h1>
 <%= form_tag ({controller: 'sessions', action: 'destroy', method: 'post'}) do %>
   <input type=submit value='logout'>
 <% end %>
