--- a/app/views/users/cars.html.erb
+++ b/app/views/users/cars.html.erb
@@ -1,5 +1,7 @@
 <h1><%= "#{@user.username}'s Cars" %></h1>
 
+<h3><%= link_to "Add Car to Garage", new_car_path %></h3>
+
 <h4>Cars:</h4>
 
 <table>
