got new header partial working

--- a/app/views/auctions/show.html.erb
+++ b/app/views/auctions/show.html.erb
@@ -19,4 +19,4 @@
 
 <p>Seller: <%= link_to @auction.seller.username, @auction.seller %></p>
 
-<%= link_to "Edit auction information", @auction %>
+<%= link_to "Edit auction information", edit_auction_path(@auction) %>
