--- a/app/views/layouts/bucketlist_user.html.erb
+++ b/app/views/layouts/bucketlist_user.html.erb
@@ -13,7 +13,7 @@
     <h1 id="site_header">~ Bucketlist ~</h1>
 
     <p>Logged in as <%= session[:username] %></p>
-    <p><a href="/logout">Log out</a> - <a href="/auctions/">Browse auctions</a> - <a href="/auctions/new">List car</a></p>
+    <p><%= link_to "Log out", logout_path %> - <%= link_to "Browse auctions", auctions_path %> - <%= link_to "List car", new_auction_path %> - <%= link_to "User page", user_path(logged_user) %></p>
     ----------------------------------------------------------
 
     <%= yield %>
