--- a/app/views/bids/new.html.erb
+++ b/app/views/bids/new.html.erb
@@ -1,7 +1,7 @@
 
 <h1><%= @auction.title %></h1>
 
-Current top bid: <%= @auction.starting_bid %><br>
+Current top bid: <%= @auction.top_bid %><br>
 
 <%= form_for @bid do |f| %>
   <%= f.label :amount %>
