upgrade to secure passwords, mostly complete, just need to fix logout route

--- a/app/views/shared/_user_form.html.erb
+++ b/app/views/shared/_user_form.html.erb
@@ -18,6 +18,6 @@
 <%= f.label :username %>
 <%= f.text_field :username %>
 <%= f.label :password %>
-<%= f.text_field :password %>
+<%= f.password_field :password %>
 <%= f.submit %>
 <% end %>
