revamping user show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,20 +1,35 @@
 <h1>User page:</h1>
 <h4>User: <%= @user.username %></h4>
 
-<%= form_tag user_path(@user), method:"DELETE" do %>
-<%= submit_tag "Delete User" %>
-<% end %>
+<h3>Active Auctions:</h3>
 
-<h3>Your Auctions:</h3>
+<h4>Buying: </h4>
+  <ul>
+  <% @user.active_buyer_auctions.each do |i| %>
+    <%= link_to i.title, auction_path(i) %><br>
+      * <%= "#{i.car.make} - #{i.car.model}" %>
+  <% end %>
+  </ul>
+
+
+<h4>Selling: </h4>
 <ul>
-  <% @user.seller_auctions.each do |auction|%>
-  <%= link_to "#{auction.car.make} #{auction.car.model}", auction_path(auction) %><br>
-  <%= "Title: #{auction.title}" %><br>
-  <%= "Description: #{auction.description}" %><br>
+  <% @user.active_seller_auctions.each do |auction|%>
+  <%= link_to auction.title, auction_path(auction) %><br>
+    * <%= "#{auction.car.make} - #{auction.car.model}" %><br>
   <% end %>
 </ul>
 
-
-
-<h4><%= link_to "User Index", users_path %></h4>
 <h4><%= link_to "My Cars", user_cars_path %></h4>
+
+<h4>My Auction History: </h4>
+
+<ul>
+  <% @user.user_history.each do |i| %>
+    <li><%= "#{i.title} - #{i.active}" %></li>
+  <% end %>
+</ul>
+
+<%= form_tag user_path(@user), method:"DELETE" do %>
+<%= submit_tag "Delete User" %>
+<% end %>
