--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,3 @@
 
 
-<p><a <%= link_to "Login", login_path %> - <%= link_to "Browse auctions", auctions_path %></p>
-----------------------------------------------------------
+<span><a <%= link_to "Login", login_path %>&nbsp;&nbsp;&nbsp;<%= link_to "Browse auctions", auctions_path %></span>
