--- a/app/views/shared/_header_logged.html.erb
+++ b/app/views/shared/_header_logged.html.erb
@@ -1,3 +1,2 @@
-<p>Logged in as <%= logged_user.username %></p>
-<p><%= link_to "Log out", logout_path, method: "DELETE" %> - <%= link_to "Browse auctions", auctions_path %> - <%= link_to "List car", new_auction_path %> - <%= link_to "User page", user_path(logged_user) %></p>
-----------------------------------------------------------
+
+<span><%= link_to "Log out", logout_path, method: "DELETE" %>&nbsp;&nbsp;&nbsp;<%= link_to "Browse auctions", auctions_path %>&nbsp;&nbsp;&nbsp;<%= link_to "List car", new_auction_path %>&nbsp;&nbsp;&nbsp;<%= link_to "User page", user_path(logged_user) %>&nbsp;&nbsp;&nbsp;</span><span id="logged_user"><%= "Logged in as: #{logged_user.username}"  %></span>
