--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,3 +1,3 @@
 
 
-<span><a <%= link_to "Login", login_path %>&nbsp;&nbsp;&nbsp;<%= link_to "Browse auctions", auctions_path %></span>
+<span><a <%= link_to "LOGIN", login_path %>&nbsp;&nbsp;&nbsp;<%= link_to "BROWSE AUCTIONS", auctions_path %></span>
