--- a/app/views/shared/_header_logged.html.erb
+++ b/app/views/shared/_header_logged.html.erb
@@ -1,2 +1,7 @@
 
-<span><%= link_to "Log out", logout_path, method: "DELETE" %>&nbsp;&nbsp;&nbsp;<%= link_to "Browse auctions", auctions_path %>&nbsp;&nbsp;&nbsp;<%= link_to "List car", new_auction_path %>&nbsp;&nbsp;&nbsp;<%= link_to "User page", user_path(logged_user) %>&nbsp;&nbsp;&nbsp;</span><span id="logged_user"><%= "Logged in as: #{logged_user.username}"  %></span>
+<span>
+  <%= link_to "ALL AUCTIONS", auctions_path %>&nbsp;&nbsp;&nbsp;
+  <%= link_to "LIST CAR", new_auction_path %>&nbsp;&nbsp;&nbsp;
+  <%= link_to "USER PAGE", user_path(logged_user) %>&nbsp;&nbsp;&nbsp;
+</span><span id="logged_user"><%= link_to "Log out of #{logged_user.username}", logout_path, method: "DELETE" %>
+</span>
