fixed more datetime stuff, updated notes

--- a/app/views/users/auctions.html.erb
+++ b/app/views/users/auctions.html.erb
@@ -49,7 +49,7 @@
         <% else %>
           <td><%= "None" %></td>
         <% end %>
-        <td><%= "Auction ends: ..." %>
+        <td><%= "Auction ends: #{i.clean_datetime(i.end_time)}" %>
       </tr>
     <% end %>
   </table>
