finished navbar. added new car link to create auction page

--- a/app/views/auctions/new.html.erb
+++ b/app/views/auctions/new.html.erb
@@ -1,4 +1,5 @@
-
+<h3><%= link_to "Click Here to Add a Car to your Garage - You must have a car to auction a car!!", new_car_path %></h3><br>
+<h2>Auction a car</h2>
 <% if @auction.errors.any? %>
   <div id= "error_explanation">
     <h2>There were some errors:</h2>
