non logged navbar changes

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -98,7 +98,7 @@ table, th, td {
      font-size: 1em;
    }
 
-   #logged_user {
+   .log_user_link {
      float: right;
      padding-right: 30px;
    }
