--- a/app/views/shared/_header_logged.html.erb
+++ b/app/views/shared/_header_logged.html.erb
@@ -5,5 +5,5 @@
   <%= link_to "MY CARS", user_cars_path(logged_user) %>&nbsp;&nbsp;&nbsp;
   <%= link_to "MY PROFILE", user_path(logged_user) %>&nbsp;&nbsp;&nbsp;
   <%= link_to "LIST CAR", new_auction_path %>&nbsp;&nbsp;&nbsp;
-</span><span id="logged_user"><%= link_to "Log out as #{logged_user.username}", logout_path, method: "DELETE" %>
+</span><span class="log_user_link"><%= link_to "Log out as #{logged_user.username}", logout_path, method: "DELETE" %>
 </span>
