added first version of feedback

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,6 +6,8 @@
 
 <h3><%= link_to "My Auctions", user_auctions_path %></h3>
 
+<h3><%= link_to "My Feedback", user_feedbacks_path %></h3>
+
 <br>
 ---------------------------------
 <h4>My Auction History: </h4>
