--- a/app/views/auctions/show.html.erb
+++ b/app/views/auctions/show.html.erb
@@ -49,7 +49,9 @@
   <li>Mileage: <%= number_with_delimiter(@car.mileage) %></li><br>
 </ul>
 
-<h4><%= link_to "Place Bid", bid_new_path %></h4>
+<div class="flashy_button">
+  <%= link_to "Place Bid", bid_new_path %>
+</div>
 
 <p>Seller: <%= link_to @auction.seller.username, @auction.seller %></p>
 
