--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,13 +25,70 @@
    font-family: Open Sans, Times, Arial, sans-serif;
 }
 
+input[type=submit] {
+  font-family: 'ZCOOL QingKe HuangYou', cursive;
+  font-size: 1.75em;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  background-color: rgba(254, 52, 207, 1);
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(0, 0, 0);
+  color: black;
+  text-align: center;
+  margin: 30px 2px;
+  cursor: pointer;
+  padding: .5em 1em;
+}
+
+input[type=submit]:hover {
+  background-color: darkblue;
+  color: white;
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(255, 255, 255);
+}
+
+.flashy_button {
+  font-family: 'ZCOOL QingKe HuangYou', cursive;
+  font-size: 1.75em;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  background-color: rgba(254, 52, 207, 1);
+  color: black;
+  text-align: center;
+  display: inline-block;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(0, 0, 0);
+}
+
+.flashy_button:hover {
+  background-color: darkblue;
+  color: white;
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(255, 255, 255);
+}
+
+.flashy_button a {
+  display: block;
+  padding: .5em 1em;
+}
+
+.flashy_button:hover a:hover{
+  color: white;
+}
+
 a {
   color: inherit;
   text-decoration: none;
 }
 
 a:hover {
-  color: hotpink;
+  color: rgba(254, 52, 207, 1);
 }
 
 th {
@@ -105,7 +162,7 @@ table, th, td {
 
   #main_body {
     max-width: 960px;
-    margin: auto;
+    margin: 10px auto 50px;
     padding: 20px 20px 50px 50px;
     background-color: #2C2C2C;
     color: white;
@@ -116,7 +173,7 @@ table, th, td {
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: black;
+  background: rgba(0, 0, 0, 0.85);
   color: white;
   text-align: center;
 }
