--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -125,6 +125,15 @@ table, th, td {
    color: rgba(254, 52, 207, 1);
    padding: 5px 5px 5px 40px;
    background: rgba(0, 0, 0, 0.85);
+   // border-top-style: solid;
+   // border-top-width: 2px;
+   // border-top-color: rgb(254, 52, 207);
+   // border-left-style: solid;
+   // border-left-width: 2px;
+   // border-left-color: rgb(254, 52, 207);
+   // border-right-style: solid;
+   // border-right-width: 2px;
+   // border-right-color: rgb(254, 52, 207);
   }
 
   #nav_menu {
@@ -134,6 +143,18 @@ table, th, td {
     color: white;
     padding: 10px;
     margin-bottom: 20px;
+    border-top-style: solid;
+    border-top-width: 2px;
+    border-top-color: rgb(254, 52, 207);
+    // border-bottom-style: solid;
+    // border-bottom-width: 2px;
+    // border-bottom-color: rgb(254, 52, 207);
+    // border-left-style: solid;
+    // border-left-width: 2px;
+    // border-left-color: rgb(254, 52, 207);
+    // border-right-style: solid;
+    // border-right-width: 2px;
+    // border-right-color: rgb(254, 52, 207);
    }
 
    #login_main {
