--- a/app/views/users/cars.html.erb
+++ b/app/views/users/cars.html.erb
@@ -22,3 +22,9 @@
   </tr>
   <% end %>
 </table>
+
+<% @user.cars.each do |car| %>
+    <% car.images.each do |image| %>
+        <%= image_tag(rails_blob_path(image)) %>
+    <% end %>
+<% end %>
