images finally working

--- a/app/views/shared/_car_form.html.erb
+++ b/app/views/shared/_car_form.html.erb
@@ -25,7 +25,8 @@
 <%= f.text_field :year %><br>
 <%= f.label :mileage %>
 <%= f.text_field :mileage %><br>
-<%= f.file_field :images, multiple: true %><br>
+Avatar <%= f.file_field :avatar, multiple: false %><br>
+
 
 <%#  Main photo <input type="file" name='car[images][]'><br>
 <%#  Photo <input type="file" name='car[images][]'><br>
