--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -82,6 +82,12 @@ input[type=submit]:hover {
   color: white;
 }
 
+h1 {
+  font-family: 'ZCOOL QingKe HuangYou', cursive;
+  color: rgba(254, 52, 207, 1);
+  font-size: 3.5em;
+}
+
 a {
   color: inherit;
   text-decoration: none;
