--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,42 +8,7 @@
 
 <h3><%= link_to "My Feedback", user_feedbacks_path %></h3>
 
-<br>
----------------------------------
-<h4>My Auction History: </h4>
-
-<table>
-  <tr>
-    <th>Auction</th>
-    <th>Make/Model</th>
-    <th>Buyer/Seller</th>
-    <th>Price</th>
-    <th>Auction Status</th>
-    <th>Transaction Page</th>
-  </tr>
-  <% @user.user_history.each do |i| %>
-  <tr>
-    <td><%= link_to i.title, auction_path(i) %></td>
-    <td><%= i.car.make %>/<%= i.car.model %></td>
-    <% if @user.seller_auctions.include?(i) %>
-      <td>Seller</td>
-    <% else %>
-      <td>Buyer</td>
-    <% end %>
-    <td>$<%= number_with_delimiter(i.top_bid) %></td>
-    <% if i.active %>
-      <td><%= "Active (ends: #{i.clean_datetime(i.end_time)})" %></td>
-    <% else %>
-      <td>Completed (<%= i.clean_datetime(i.end_time) %>)</td>
-    <% end %>
-    <% if !i.active %>
-      <td><%= link_to "Details", auction_transaction_path(i) %></td>
-    <% else %>
-      <td>-</td>
-    <% end %>
-  </tr>
-  <% end %>
-</table>
+<h3><%= link_to "My Auction History", user_auction_histories_path %></h3>
 
 <br><br>
 <% if logged_user == @user %>
