--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,9 @@
-<h1>Create a new user:</h1>
 
-<%= render 'shared/user_form' %>
+<div class='margin_auto'>
 
-<h4><%= link_to "User Index", users_path %></h4>
+<%= render 'shared/user_form', class: 'margin_auto' %>
+
+
+</div>
+
+<p>Please enter the required information</p>
