--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -78,6 +78,10 @@ input[type=submit]:hover {
   padding: .5em 1em;
 }
 
+.margin_auto {
+  margin: auto;
+}
+
 .flashy_button:hover a:hover{
   color: white;
 }
